--- a/details.html
+++ b/details.html
@@ -65,6 +65,7 @@
 	      <ol>
 		      <li>A simple change made at GitHub!</li>
               <li>.....</li>
+              <li>le fix</li>
 		  </ol>
           <ol>
               <li>Starting the rebase developer 1</li>
