Startd feature branch 1 on rebase demo - commit 2

--- a/details.html
+++ b/details.html
@@ -76,6 +76,7 @@
           </ol>
           <ol>
               <li>Starting a new rebase dev 1</li>
+              <li>Second commit from dev 1</li>
           </ol>
 	    <hr />
             <footer>
